# solana-programs

./: .gitignore  COPYING.MIT  Cargo.toml  DESIGN.md  Justfile  README.md
.github/: CODEOWNERS
.github/actions/setup-just/: action.yml
.github/actions/setup-solana/: action.yml
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: instructions.rs  main.rs  token.rs
cli/src/cmd/: create_order.rs  mod.rs
client/: Cargo.toml  README.md
client/src/: instructions.rs  lib.rs
interface/: Cargo.toml  README.md
interface/proptest-regressions/pda/: order.txt
interface/src/: create_order.rs  intent.rs  lib.rs  settle.rs
interface/src/data/: intent.rs  mod.rs  order.rs  state.rs
interface/src/instruction/: create_buffer.rs  create_order.rs  initialize.rs  mod.rs  reclaim_buffer.rs  reclaim_order.rs  settle.rs
interface/src/instruction/settle/: begin.rs  finalize.rs  mod.rs
interface/src/pda/: buffer.rs  mod.rs  order.rs  state.rs
programs/settlement/: Cargo.toml  README.md
programs/settlement/idl/: cow_settlement.json  generate.mjs  package.json
programs/settlement/idl/client/js/: package.json  tsconfig.json
programs/settlement/idl/client/js/src/: hooked.ts
programs/settlement/idl/client/js/tests/: createOrder.test.ts  fixtures.ts
programs/settlement/src/: cpi_guard.rs  create_buffer.rs  create_order.rs  initialize.rs  lib.rs  processor.rs  reclaim_buffer.rs  reclaim_order.rs  settle.rs  test_utils.rs
programs/settlement/src/settle/: begin.rs  finalize.rs  mod.rs
programs/settlement/tests/: begin_settle_orders.rs  create_buffer.rs  create_order.rs  finalize_settle_pushes.rs  initialize.rs  matching_begin_finalize.rs  program_deployment.rs  reclaim_buffer.rs  reclaim_order.rs  settle_limit_prices.rs  token_authority_poc.rs
programs/settlement/tests/common/: benchmark.rs  buffer.rs  lookup_table.rs  mod.rs  order.rs  pda.rs  settlement.rs  token.rs
programs/test-cpi-caller/: Cargo.toml
programs/test-cpi-caller/src/: lib.rs
programs/test/cpi-caller/: Cargo.toml
programs/test/cpi-caller/src/: lib.rs
src/: lib.rs
test-cli/: Cargo.toml
test-cli/src/: instructions.rs  main.rs  token.rs
test-cli/src/cmd/: create_order.rs  mod.rs  settle.rs
tests/: program_deployment.rs
