[package]
name = "cow-solana-programs"
version = "0.1.0"
# Solana recommends edition 2021: https://solana.com/docs/programs/rust
edition = "2021"

[lib]
# Required for `cargo build-sbf` to emit a Solana shared object (.so). See:
# https://solana.com/docs/programs/rust/program-structure
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = "0.11.1"

[dev-dependencies]
litesvm = "0.12.0"
solana-sdk = "3"
