[workspace]
resolver = "2"
members = ["client", "interface", "programs/settlement", "programs/test/cpi-caller"]

[workspace.package]
version = "0.1.0"
# Solana recommends edition 2021: https://solana.com/docs/programs/rust
edition = "2021"

# Most crates in this repository use MIT or Apache-2.0 dual license.
license = "MIT OR Apache-2.0"

[workspace.dependencies]
arrayref = "0.3"
derive_more = { version = "1", features = ["deref"] }
hex-literal = "1"
litesvm = "0.12.0"
litesvm-token = "0.12.0"
num_enum = "0.7"
pinocchio = "0.11.1"
pinocchio-system = "0.6"
pinocchio-token = "0.6"
proptest = "1"
settlement-client = { path = "client" }
settlement-interface = { path = "interface" }
solana-account-view = "2"
solana-address = "2"
solana-address-lookup-table-interface = "3"
solana-hash = "3"
solana-instruction = "3"
solana-program-error = "3"
solana-pubkey = "3"
solana-sdk = "3"
solana-sdk-ids = "3"
solana-sha256-hasher = { version = "3", features = ["sha2"] }
solana-system-interface = "3"
spl-associated-token-account-interface = "2"
spl-token-interface = "2"

[workspace.metadata.cli]
# Used to help solana-verify identify the correct build image.
solana = "3.1.14"

[workspace.lints.clippy]
# Promote arithmetic side effect lint to hard error.
# The settlement program (and related crates) need to do safe integer
# manipulation. This lint makes sure that we're aware of overflow-underflow
# issues in arithmetic operations.
# https://rust-lang.github.io/rust-clippy/master/index.html#arithmetic_side_effects
arithmetic_side_effects = "deny"

# Silence compiler warning produced by a Pinocchio macro.
# Pinocchio's `entrypoint!` macro expands to `#[cfg(target_os = "solana")]`. The
# Solana toolchain sets that target_os when building via `cargo build-sbf`, but
# host `rustc` doesn't know "solana" is a valid value and warns. Registering it
# via `check-cfg` matches the pattern used by official SPL programs (e.g.
# https://github.com/solana-program/address-lookup-table program/Cargo.toml).
#
# Only the `programs/settlement` crate actually uses this. This workaround sits
# at the workspace level only because Cargo doesn't currently allow combining
# `[lints] workspace = true` with crate-local `[lints.rust.*]`. Once that
# changes, this can be moved to `programs/settlement/Cargo.toml`.
# https://github.com/rust-lang/cargo/issues/13157
[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("solana"))']
