[package]
name = "cow-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cow"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
settlement-client.workspace = true
solana-commitment-config.workspace = true
solana-instruction.workspace = true
solana-program-pack.workspace = true
solana-rpc-client.workspace = true
solana-sdk.workspace = true
# v2 uses solana-pubkey v3 (same as the rest of the workspace); v3 uses solana-address which is incompatible.
solana-system-interface = "2"
spl-associated-token-account = "8"
spl-token = "9"
spl-token-interface = "2"

[lints]
workspace = true
