[package]
name = "settlement-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
settlement-interface.workspace = true

[dev-dependencies]
proptest.workspace = true
settlement-interface = { workspace = true, features = ["test-fixtures"] }

[lints]
workspace = true
