[package]
name = "settlement-interface"
version.workspace = true
edition.workspace = true

[dependencies]
arrayref.workspace = true
num_enum.workspace = true
solana-instruction.workspace = true
solana-program-error.workspace = true
solana-pubkey.workspace = true
solana-sha256-hasher.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
