[package]
name = "settlement-interface"
version.workspace = true
edition.workspace = true

[dependencies]
arrayref.workspace = true
derive_more.workspace = true
num_enum.workspace = true
solana-instruction.workspace = true
solana-program-error.workspace = true
solana-pubkey = { workspace = true, features = ["curve25519"] }
solana-sdk-ids.workspace = true
solana-sha256-hasher.workspace = true
solana-system-interface.workspace = true

[dev-dependencies]
hex-literal.workspace = true
proptest.workspace = true

[lints]
workspace = true
