[package]
name = "settlement-interface"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arrayref.workspace = true
derive_more.workspace = true
num_enum.workspace = true
proptest = { workspace = true, optional = true }
# `copy` makes `AccountView`/`Address` `Copy`, matching the program: it builds
# against Pinocchio (default `copy` features on), whose own `copy` forwards to
# this package as well:
# https://github.com/anza-xyz/pinocchio/blob/8758463e1bbddecc34fc6dccc7259091eacbb157/sdk/Cargo.toml#L27-L29
solana-account-view = { workspace = true, features = ["copy"] }
solana-address.workspace = true
solana-hash.workspace = true
solana-instruction.workspace = true
solana-program-error.workspace = true
solana-program-pack.workspace = true
solana-pubkey = { workspace = true, features = ["curve25519"] }
solana-sdk-ids.workspace = true
solana-sha256-hasher.workspace = true
solana-system-interface.workspace = true
spl-token-interface.workspace = true

[dev-dependencies]
hex-literal.workspace = true
proptest.workspace = true

[features]
# Exposes the test fixtures and proptest strategies under `data::*::fixtures` so
# other crates can build and fuzz against sample intents and order accounts.
# Enabled here by `cfg(test)` for this crate's own tests.
test-fixtures = ["dep:proptest"]

[lints]
workspace = true
