[package]
name = "cow-test-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cow"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
settlement-client.workspace = true
solana-commitment-config.workspace = true
solana-instruction.workspace = true
solana-program-pack.workspace = true
solana-rpc-client.workspace = true
solana-sdk.workspace = true
solana-system-interface = { workspace = true, features = ["bincode"] }
spl-associated-token-account-interface.workspace = true
spl-token.workspace = true
spl-token-interface.workspace = true

[lints]
workspace = true
