[package]
name = "settlement"
version.workspace = true
edition.workspace = true

[lib]
# Required for `cargo build-sbf` to emit a Solana shared object (.so). See:
# https://solana.com/docs/programs/rust/program-structure
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = { workspace = true, features = ["cpi"] }
pinocchio-system.workspace = true
pinocchio-token.workspace = true
settlement-interface.workspace = true

[dev-dependencies]
arrayref.workspace = true
litesvm.workspace = true
litesvm-token.workspace = true
settlement-client.workspace = true
solana-sdk.workspace = true
solana-system-interface.workspace = true

[lints]
workspace = true
