[package]
name = "settlement"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
# Required for `solana-verify` to identify (allegedly). See:
# https://solana.com/docs/programs/verified-builds#prepare-project
name = "cow_settlement"
# Required for `cargo build-sbf` to emit a Solana shared object (.so). See:
# https://solana.com/docs/programs/rust/program-structure
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = { workspace = true, features = ["cpi"] }
pinocchio-system.workspace = true
pinocchio-token.workspace = true
settlement-interface.workspace = true
solana-instruction = { workspace = true, features = ["syscalls"] }

[dev-dependencies]
arrayref.workspace = true
litesvm.workspace = true
litesvm-token.workspace = true
proptest.workspace = true
settlement-client.workspace = true
settlement-interface = { workspace = true, features = ["test-fixtures"] }
solana-address-lookup-table-interface = { workspace = true, features = ["bincode"] }
solana-sdk.workspace = true
solana-system-interface.workspace = true

[lints]
workspace = true
